refs #54893 - Fix hummingbird ps9 theme Fix nowrap in some hooks

--- a/views/css/front.css
+++ b/views/css/front.css
@@ -202,7 +202,8 @@
 .younitedpay-widget-root :after,
 .younitedpay-widget-root :before {
     box-sizing: border-box;
-    border: 0 solid #e2e8f0
+    border: 0 solid #e2e8f0;
+    white-space: normal;
 }
 
 .younitedpay-widget-root hr {
